# studysight

./: .gitignore  CLAUDE.md  CONTEXT.md  STUDYSIGHT_ROADMAP.md  skills-lock.json
.agents/skills/vibe-security/: SKILL.md
.agents/skills/vibe-security/agents/: openai.yaml
.agents/skills/vibe-security/references/: ai-integration.md  authentication.md  data-access.md  database-security.md  deployment.md  mobile.md  payments.md  rate-limiting.md  secrets-and-env.md
.claude/skills/: vibe-security
focus-engine/: focus_server.py  focus_server.spec  requirements.txt  train_model.py
src/: index.html  style.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/js/: app.js  goals.js  stats.js  timer.js
